--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			</div>
 			<nav>
 				<ul>
-					<li><a href="file:///C:/Users/nicho/Desktop/Basic-Portfolio/contact.html?Full+Name=&Example%40gmail.com=&message=">Contact</a></li>
+					<li><a href="file:///C:/Users/nicho/Desktop/Basic-Portfolio/contact.html">Contact</a></li>
 					<li><a href="file:///C:/Users/nicho/Desktop/Basic-Portfolio/Portfolio.html">Portfolio</a></li>
 					<li><a href="file:///C:/Users/nicho/Desktop/Basic-Portfolio/index.html">About</a></li>
 				</ul>
