working responsive portfolio

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,69 +1,75 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-us">
-<head>
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<title>Portfolio</title>
-</head>
-<body>
-	<section>
-		<header class="header">	
-			<div class="myname">
-			<h1>Nicholas Allen</h1>
-			</div>
-			<nav>
-				<ul>
-					<li><a href="file:///C:/Users/nicho/Desktop/Basic-Portfolio/contact.html">Contact</a></li>
-					<li><a href="file:///C:/Users/nicho/Desktop/Basic-Portfolio/Portfolio.html">Portfolio</a></li>
-					<li><a href="file:///C:/Users/nicho/Desktop/Basic-Portfolio/index.html">About</a></li>
-				</ul>
-			</nav>
-		</header>
-	</section>
-	<section>
-		<div class="works">
-			<div>
-				<h1 class="aboutwords">Portfolio</h1>
-			</div>
-			<hr/>
-			<div class="beebox">
-				<img class="bee" src="assets/images/spellingbee.jpg" alt="bee" />
-				<h3 class="g1name">Spelling Game</h3>
-			</div>
-			<div class="rpgbox">
-				<img class="rpg" src="assets/images/rpggame.jpg" alt="rpg">
-				<h3 class="g2name">RPG Game</h3>
-			</div>
-			<div class="triviabox">
-				<img class="trivia" src="assets/images/trivia.png" alt="trivia">
-				<h3 class="g3name">Trivia Game</h3>
-			</div>
-			<div class="infobox">
-				<img class="info" src="assets/images/info.png" alt="info">
-				<h3 class="g4name">Info</h3>
-			</div>
-			<div class="rpsbox">
-				<img class="rps" src="assets/images/rps.png" alt="rps">
-				<h3 class="g5name">Rock Paper Scissors</h3>
-			</div>
-		</div>	
-		<div class="connectbox">
-			<div>
-				<h2 class="connectwords">Connect with Me</h2>
-			</div>	
-			<hr/>
-			<div>
-				<img class="Git" src="assets/images/github.png" alt="githublogo">
-				<img class="Linked" src="assets/images/linkedin.png" alt="linkedinlogo">
-				<img class="Stack" src="assets/images/stackoverflow.png" alt="stackoverflowlogo">
-			</div>	
-		</div>
-	</section>
-	<section>
-		<footer>				
-			<p class="foot">&copyCopyright 2017 Nicholas Allen</p>
-		</footer>
-	</section>
 
+<head>
+  <meta charset="UTF-8">
+  <title>Portfolio | Your Name</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Nicholas Allen</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>Portfolio</h1>
+
+      <div class="work">
+        <img src="assets/images/spellingbee.jpg" alt="hangman">
+
+        <h3>Hangman</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/rpggame.jpg" alt="RPG Game">
+
+        <h3>RPG Game</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/trivia.png" alt="Trivia Game">
+
+        <h3>Trivia Game</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/info.png" alt="Rutgers Info Widget">
+
+        <h3>Rutgers Info Widget</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/rps.png" alt="Rock Paper Scissors">
+
+        <h3>Rock Paper Scissors</h3>
+      </div>
+
+    </section>
+
+    <section class="sidebar">
+      <div id="connect">
+        <h2>Connect with Me</h2>
+
+        <a href="#"><img src="assets/images/github.png" class="social" alt="GitHub" /></a>
+        <a href="#"><img src="assets/images/linkedin.png" class="social" alt="LinkedIn" /></a>
+        <a href="#"><img src="assets/images/stackoverflow.png" class="social" alt="Stack Overflow" /></a>
+      </div>
+    </section>
+  </div>
+
+  <footer>
+    <div class="container">
+      &copyCopyright 2017 Nicholas Allen
+    </div>
+  </footer>
 </body>
+
 </html>
