--- a/contact.html
+++ b/contact.html
@@ -1,73 +1,67 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-us">
+
 <head>
-	<title>Contact</title>
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <title>Contact | Your Name</title>
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
-	<section>
-		<header class="header">	
-			<div class="myname">
-			<h1>Nicholas Allen</h1>
-			</div>
-			<nav>
-				<ul>
-					<li><a href="file:///C:/Users/nicho/Desktop/Basic-Portfolio/contact.html">Contact</a></li>
-					<li><a href="file:///C:/Users/nicho/Desktop/Basic-Portfolio/Portfolio.html">Portfolio</a></li>
-					<li><a href="file:///C:/Users/nicho/Desktop/Basic-Portfolio/index.html">About</a></li>
-				</ul>
-			</nav>
-		</header>
-	</section>
 
-	<section class="body">
-		<div class="aboutbox">	
-			<div>
-				<h1 class="aboutwords">Contact</h1>
-			</div>
-			<hr/>
-			<div class="formfields">
-				<form>
-					Name:<br>
-					<input type="text" name="Full Name">
-					<br>
-					Email:<br>
-					<input type="text" name="Example@gmail.com">
-					<br>
-					Message:<br>
-					<textarea name="message" rows="10" cols="100"></textarea>
-					<br>
-					<br>
-					<input type="submit">					
-				</form>
-			</div>
-		</div>
-				
-		<div class="connectbox">
-			<div>
-				<h2 class="connectwords">Connect with Me</h2>
-			</div>	
-				<hr/>
-			<div>
-				<img class="Git" src="assets/images/github.png" alt="github logo">
-				<img class="Linked" src="assets/images/linkedin.png" alt="linkedinlogo">
-				<img class="Stack" src="assets/images/stackoverflow.png" alt="stackoverflowlogo">
-			</div>	
-		</div>
-	</section>
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">Your Name</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-	<section>
-		<footer>				
-			<p class="foot">&copyCopyright 2017 Nicholas Allen</p>
-		</footer>
-	</section>
-	
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>Contact</h1>
 
+      <form id="contact-form">
+        <ul>
+          <li>
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" placeholder="John Smith" required="required">
+          </li>
+          <li>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
+          </li>
+          <li>
+            <label for="message">Message</label>
+            <textarea id="message" name="message" required="required"></textarea>
+          </li>
+        </ul>
+        <input type="submit">
+      </form>
 
+    </section>
 
+    <section class="sidebar">
+      <div id="connect">
+        <h2>Connect with Me</h2>
 
+        <a href="#"><img src="assets/images/github.png" class="social" alt="GitHub" /></a>
+        <a href="#"><img src="assets/images/linkedin.png" class="social" alt="LinkedIn" /></a>
+        <a href="#"><img src="assets/images/stackoverflow.png" class="social" alt="Stack Overflow" /></a>
+      </div>
+    </section>
+  </div>
 
-
+  <footer>
+    <div class="container">
+      &copyCopyright 2017 Nicholas Allen
+    </div>
+  </footer>
 </body>
+
 </html>
